test/src/objects/student__c.object
<CustomObject>
    <fields>
        <fullName>balance__c</fullName>
        <formula>course__r.fees__c - installment1__c + installment2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>contact_number__c</fullName>
        <label>contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>course</label>
        <referenceTo>course__c</referenceTo>
        <relationshipLabel>students</relationshipLabel>
        <relationshipName>students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>installment1__c</fullName>
        <label>installment1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>installment2__c</fullName>
        <label>installment2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>installments_cannot_be_less_than_500</fullName>
        <active>true</active>
        <errorConditionFormula>installment1__c &lt;500|| installment2__c &lt;500</errorConditionFormula>
        <errorMessage>installments_cannot_be_less_than_500</errorMessage>
    </validationRules>
</CustomObject>